# mcpserverexample

./: README.md  main.py  pyproject.toml
src/mcp_server_deep_dive_deployment.egg-info/: PKG-INFO  SOURCES.txt
src/mcpserver/: deployment.py
